// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`platform/bitbucket-server createPr() posts PR 1`] = `
Array [
  Array [
    "/rest/api/1.0/projects/some/repos/repo/pull-requests",
    Object {
      "body": Object {
        "description": "body",
        "fromRef": Object {
          "id": "refs/heads/branch",
        },
        "title": "title",
        "toRef": Object {
          "id": "refs/heads/master",
        },
      },
    },
  ],
]
`;

exports[`platform/bitbucket-server getPr() gets a PR 1`] = `
Object {
  "body": "* Line 1
* Line 2",
  "branchName": "userName1/pullRequest5",
  "canMerge": false,
  "canRebase": true,
  "createdAt": undefined,
  "displayNumber": "Pull Request #5",
  "isConflicted": false,
  "number": 5,
  "state": "open",
  "title": "title",
  "version": 1,
}
`;

exports[`platform/bitbucket-server getPrBody() returns diff files 1`] = `"**foo**bartext"`;

exports[`platform/bitbucket-server initRepo() works 1`] = `
Object {
  "isFork": false,
  "privateRepo": undefined,
  "repoFullName": "repo",
}
`;

exports[`platform/bitbucket-server mergePr() posts Merge 1`] = `
Array [
  Array [
    "/rest/api/1.0/projects/some/repos/repo/pull-requests/5/merge",
  ],
]
`;

exports[`platform/bitbucket-server setBaseBranch() updates file list 1`] = `
Array [
  Array [
    "/rest/api/1.0/projects/some/repos/repo",
  ],
  Array [
    "/rest/api/1.0/projects/some/repos/repo/branches/default",
  ],
]
`;

exports[`platform/bitbucket-server updatePr() puts PR 1`] = `
Array [
  Array [
    "/rest/api/1.0/projects/some/repos/repo/pull-requests/5",
    Object {
      "body": Object {
        "description": "body",
        "title": "title",
        "version": 1,
      },
    },
  ],
]
`;
